CSCE434/pp4/samples/jon_badinterface6.out

*** Error line 11.
  a1 = NewArray(t2);
                  ^
*** syntax error

